k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone-simulator
  labels:
    app: drone-simulator
spec:
  selector:
    app: drone-simulator
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
